--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
     "illuminate/support":">=7",
     "illuminate/database":">=7",
     "akbarali/data-object":">=1",
-    "illuminate/contracts": "^v8.10.0",
+    "illuminate/contracts": ">=8.10.0",
     "ramsey/uuid": "^3.9",
-    "illuminate/http": "^v8.10.0",
+    "illuminate/http": ">=8.10.0",
     "symfony/serializer": "^7.0"
   },
   "require-dev":{
