--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "illuminate/database":">=7",
     "akbarali/data-object":">=1",
     "illuminate/contracts": ">=8.10.0",
-    "ramsey/uuid": "^3.9",
+    "ramsey/uuid": ">=3.9",
     "illuminate/http": ">=8.10.0",
     "symfony/serializer": "^7.0"
   },
