--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "illuminate/contracts": ">=8.10.0",
     "ramsey/uuid": ">=3.9",
     "illuminate/http": ">=8.10.0",
-    "symfony/serializer": "^7.0"
+    "symfony/serializer": "^7.0",
+    "illuminate/pagination": "10.x-dev"
   },
   "require-dev":{
     "roave/security-advisories":"dev-latest"
