--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "name":"akbarali/view-model",
-  "version":"2.0",
+  "version":"2.1",
   "description":"View Model PHP Laravel",
   "license":"MIT",
-  "minimum-stability": "stable",
+  "minimum-stability":"stable",
   "type":"library",
   "keywords":[
     "php",
@@ -23,16 +23,16 @@
   ],
   "require":{
     "php":">=8.0",
-    "illuminate/support":">=7",
-    "illuminate/database":">=7",
     "akbarali/data-object":">=1",
-    "illuminate/contracts": ">=8.10.0",
-    "ramsey/uuid": ">=3.9",
-    "illuminate/http": ">=8.10.0",
-    "symfony/serializer": "^v6.0.0",
-    "illuminate/pagination": ">=8.10.0"
+    "ramsey/uuid":">=3.9"
   },
   "require-dev":{
-    "roave/security-advisories":"dev-latest"
+    "roave/security-advisories":"dev-latest",
+    "illuminate/support":">=7",
+    "illuminate/contracts":">=8.10.0",
+    "illuminate/http":">=8.10.0",
+    "symfony/serializer":"^v6.0.0",
+    "illuminate/database":">=7",
+    "illuminate/pagination":">=8.10.0"
   }
 }
